@@ -31,6 +31,8 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
+//-----------------------------------------------------------------------------
+
 template<class T>
 class fcnPerformance{
 public:
@@ -40,12 +42,13 @@ public:
 * Construct from name, input and scalar function and number of repetitions.
 * Scalar signature.
 **/
-fcnPerformance(const std::string& fcnName, 
+fcnPerformance(const std::string& fcnName,
                const std::vector<T>& input, 
                const std::function<T(T)> fcn,
                const uint32_t repetitions=10):
                 m_fcn_name(fcnName),
                 m_input(input),
+                m_input2(input),
                 m_fcn(fcn),
                 m_repetitions(repetitions){
 
@@ -54,16 +57,33 @@ fcnPerformance(const std::string& fcnName,
 }
 
 //-----------------------------------------------------------------------------
+fcnPerformance(const std::string& fcnName,
+               const std::vector<T>& input1,
+               const std::vector<T>& input2,
+               const std::function<T(T,T)> fcn,
+               const uint32_t repetitions=10):
+                m_fcn_name(fcnName),
+                m_input(input1),
+                m_input2(input2),
+                m_fcn2D(fcn),
+                m_repetitions(repetitions){
+
+  measureTime2D();
+
+}
+
+//-----------------------------------------------------------------------------
 /** 
 * Construct from name, input and scalar function and number of repetitions.
 * Array signature.
 **/
-fcnPerformance(const std::string& fcnName, 
-               const std::vector<T>& input, 
+fcnPerformance(const std::string& fcnName,
+               const std::vector<T>& input,
                std::function<void(uint32_t,T*,T* )> fcnv,
                const uint32_t repetitions=10):
                 m_fcn_name(fcnName),
                 m_input(input),
+                m_input2(input),
                 m_fcnv(fcnv),
                 m_repetitions(repetitions){
 
@@ -72,6 +92,24 @@ fcnPerformance(const std::string& fcnName,
 }
 
 //------------------------------------------------------------------------------
+fcnPerformance(const std::string& fcnName,
+               const std::vector<T>& input1,
+               const std::vector<T>& input2,
+               std::function<void(uint32_t,T*,T*,T* )> fcnv,
+               const uint32_t repetitions=10):
+                m_fcn_name(fcnName),
+                m_input(input1),
+                m_input2(input2),
+                m_fcn2Dv(fcnv),
+                m_repetitions(repetitions){
+
+  measureTime2Dv();
+
+}
+
+//------------------------------------------------------------------------------
+
+
 /// Nothing to do here
 ~fcnPerformance(){}
 
@@ -106,10 +144,16 @@ private:
   const std::string m_fcn_name;
   /// Const reference to the input values
   const std::vector<T>& m_input;
+  /// Const reference to the input values
+  const std::vector<T>& m_input2;
   /// Scalar function 
   const std::function<T(T)> m_fcn;
+  /// Scalar function
+  const std::function<T(T,T)> m_fcn2D;
   /// Array function (cannot coexist with scalar)
-  const std::function<void(uint32_t,T*,T*)> m_fcnv; 
+  const std::function<void(uint32_t,T*,T*)> m_fcnv;
+  /// Array function (cannot coexist with scalar)
+  const std::function<void(uint32_t,T*,T*,T*)> m_fcn2Dv;
   /// Number of repetitions of the measurement for stability
   const uint32_t m_repetitions;
   /// Mean time
@@ -144,7 +188,7 @@ private:
     // Perform the measurment on _all_ the input values
     fcntimer.start();
     for (uint32_t i=0;i<size;++i)
-      results_arr[i] = m_fcn(input_arr[i]);      
+      results_arr[i] = m_fcn(input_arr[i]);
     fcntimer.stop();        
     
     // Record only if part of the warm-up
@@ -164,7 +208,54 @@ private:
   const uint64_t iterations = size * m_repetitions;
   calculate_mean_and_err(t,t2,iterations);
   }
+  //-----------------------------------------------------------------------------
+  /// Measure the timings of the function, scalar signature
+    void measureTime2D(){
 
+    // momenta to calculate mean and rms, they will be filled later
+    uint64_t t=0;
+    uint64_t t2=0;
+
+    // An useful quantity
+    const uint32_t size=m_input.size();
+
+    // Allocate the array of results. Necessary to circumvent compiler optimisations
+    double* results_arr = new double[size];
+    // Set up some warm-up iterations
+    const uint32_t warm_up = m_repetitions;
+    // Allocate once the delta outside the loop
+    uint64_t deltat=0;
+    // The timer which is used to mesure the time interval
+    vdth::timer fcntimer;
+    // Start the loop on the repetitions
+    for (uint32_t irep=0;irep<m_repetitions+warm_up;irep++){
+      // Isolate the array inside the vector
+      const T* input_arr1=&m_input[0];
+      const T* input_arr2=&m_input2[0];
+
+      // Perform the measurment on _all_ the input values
+      fcntimer.start();
+      for (uint32_t i=0;i<size;++i)
+        results_arr[i] = m_fcn2D(input_arr1[i],input_arr2[i]);
+      fcntimer.stop();
+
+      // Record only if part of the warm-up
+      if (irep>=warm_up){
+        deltat=fcntimer.get_elapsed_time();
+        t+=deltat;
+        t2+=deltat*deltat;
+        }
+
+      // To avoid optimisations, call a dummy function
+      std::vector<T> results(results_arr,results_arr+size);
+      fool_optimisation(results);
+      }
+    delete [] results_arr;
+
+    // Calculate mean and error on the mean
+    const uint64_t iterations = size * m_repetitions;
+    calculate_mean_and_err(t,t2,iterations);
+    }
 //-----------------------------------------------------------------------------
 /// Measure the timings of the function, array signature
   void measureTimev(){
@@ -188,7 +279,7 @@ private:
       fcntimer.stop();      
 
       if (irep>=warm_up){
-	deltat = fcntimer.get_elapsed_time();
+      	deltat = fcntimer.get_elapsed_time();
         t+=deltat;
         t2+=deltat*deltat;
         }
@@ -202,6 +293,43 @@ private:
   calculate_mean_and_err(t,t2,iterations);
   }
 
+  //-----------------------------------------------------------------------------
+  /// Measure the timings of the function, array signature
+void measureTime2Dv(){
+	// See explainations in the scalar method!
+		uint64_t t=0.;
+		uint64_t t2=0.;
+
+		const uint32_t size=m_input.size();
+
+		const uint32_t warm_up = m_repetitions;
+		uint64_t deltat=0;
+		vdth::timer fcntimer;
+
+		for (uint32_t irep=0;irep<m_repetitions+warm_up;irep++){
+
+				T* input_arr1= const_cast<T*> (&m_input[0]);
+				T* input_arr2= const_cast<T*> (&m_input2[0]);
+				T* results_arr=new T[size];
+
+				fcntimer.start();
+				m_fcn2Dv(size,input_arr1,input_arr2,results_arr);
+				fcntimer.stop();
+
+				if (irep>=warm_up){
+					deltat = fcntimer.get_elapsed_time();
+					t+=deltat;
+					t2+=deltat*deltat;
+					}
+
+			 std::vector<T> results(results_arr,results_arr+size);
+			 delete[] results_arr;
+			 fool_optimisation(results);
+			}
+
+		const uint64_t iterations = size * m_repetitions;
+		calculate_mean_and_err(t,t2,iterations);
+		}
 
 //------------------------------------------------------------------------------
 /// Loop on the values in order to force the compiler to actually calculate them for real
@@ -229,5 +357,6 @@ void calculate_mean_and_err(const double t, const double t2,const uint64_t itera
 //------------------------------------------------------------------------------
   
 };
+
 
 #endif 
