@@ -15,11 +15,11 @@
 #include <iostream>
 #include <fstream>
 #include <string>
-  
-  
+
+
 /**
  * Loop on the functions, and measure performance
-**/
+ **/
 
 /*
  - log
@@ -32,15 +32,26 @@
  - atan
  - inverse sqrt
  - inverse (faster than division, based on isqrt)
-*/
+ */
 template <class T,class TUPLE>
 void print_avg(const TUPLE& dpfcntuple, std::ofstream& ofile,uint32_t repetitions){
-  fcnPerformance<T> dpExpPerf(std::get<0>(dpfcntuple),
-                                   std::get<2>(dpfcntuple),
-                                   std::get<1>(dpfcntuple),
-                                   repetitions);
-  dpExpPerf.print();
-  dpExpPerf.print(ofile);
+	fcnPerformance<T> dpExpPerf(std::get<0>(dpfcntuple),
+			std::get<2>(dpfcntuple),
+			std::get<1>(dpfcntuple),
+			repetitions);
+	dpExpPerf.print();
+	dpExpPerf.print(ofile);
+}
+
+template <class T,class TUPLE>
+void print_avg2D(const TUPLE& dpfcntuple, std::ofstream& ofile,uint32_t repetitions){
+	fcnPerformance<T> dpExpPerf(std::get<0>(dpfcntuple),
+			std::get<2>(dpfcntuple),
+			std::get<3>(dpfcntuple),
+			std::get<1>(dpfcntuple),
+			repetitions);
+	dpExpPerf.print();
+	dpExpPerf.print(ofile);
 }
 
 int main(int argc, char **argv){
@@ -62,7 +73,7 @@ int main(int argc, char **argv){
 
 	if(!opt.parseCmd(argc,argv)){
 		std::cout << "Something is wrong with cmd options, try --help\n"
-			<<"usage: vdtPerfBenchmark -n=<run88libmVSvdt>\n";
+				<<"usage: vdtPerfBenchmark -n=<run88libmVSvdt>\n";
 		return 0;
 	}
 	// if help was printed, exit
@@ -76,7 +87,7 @@ int main(int argc, char **argv){
 		opt.printHelp("-n");
 		return 0;
 	}
-	
+
 
 	//getArgument() contains isSet check 
 	if(opt.getArgument("-s") != "")
@@ -93,57 +104,99 @@ int main(int argc, char **argv){
 
 	// Control print
 	std::cout << "Running with nick: " << nick << ", size: " << SIZE << ", repetitions: "<< REPETITIONS
-			  << ", the pool max:" << POOL_MAX << " and the pool min:" << POOL_MIN << "\n";
-  
+			<< ", the pool max:" << POOL_MAX << " and the pool min:" << POOL_MIN << "\n";
+
 	// setup filename
 	std::string fname = nick + "__performance_benchmark.txt";
 
 	std::ofstream ofile(fname);
 
-    std::cout << "Double Precision\n";
+	std::cout << "Double Precision\n";
 
-    randomPool<double> symmrpool (POOL_MIN,POOL_MAX,SIZE);
-    randomPool<double> asymmrpool (.00001,POOL_MAX,SIZE);
-    randomPool<double> mone2onerpool (-1,1,SIZE);
-    randomPool<double> expPool (-705,705,SIZE);
+	randomPool<double> symmrpool (POOL_MIN,POOL_MAX,SIZE);
+	randomPool<double> asymmrpool (.00001,POOL_MAX,SIZE);
+	randomPool<double> mone2onerpool (-1,1,SIZE);
+	randomPool<double> expPool (-705,705,SIZE);
+	randomPool2D<double> mone2onerpool2D (-1,-1,1,1,SIZE);
 
+	// simple
 	std::vector<genfpfcn_tuple<double>> dp_fcns;
-    getFunctionTuples(&dp_fcns,symmrpool,asymmrpool,mone2onerpool,expPool);
-    
-    for (const auto& dpfcntuple : dp_fcns)
-      print_avg<double,genfpfcn_tuple<double>>(dpfcntuple,ofile,REPETITIONS);
- 
-	// double precision vectorised
+	getFunctionTuples(&dp_fcns,symmrpool,asymmrpool,mone2onerpool,expPool);
 
+	for (const auto& dpfcntuple : dp_fcns)
+		print_avg<double,genfpfcn_tuple<double>>(dpfcntuple,ofile,REPETITIONS);
+
+	// double precision vectorised -----------------------------------------------
+
+	// Simple
 	std::vector<genfpfcnv_tuple<double>> dp_fcnsv;
-    getFunctionTuplesvect(&dp_fcnsv,symmrpool,asymmrpool,mone2onerpool,expPool);
+	getFunctionTuplesvect(&dp_fcnsv,symmrpool,asymmrpool,mone2onerpool,expPool);
 
-    for (const auto& dpfcntuple : dp_fcnsv)
-      print_avg<double,genfpfcnv_tuple<double>>(dpfcntuple,ofile,REPETITIONS);    
+	for (const auto& dpfcntuple : dp_fcnsv)
+		print_avg<double,genfpfcnv_tuple<double>>(dpfcntuple,ofile,REPETITIONS);
 
-    
+	//------------------------------------------------------------------------------
+
 	// NOW SINGLE PRECISION    
-      
-    std::cout << "Single Precision\n";
-      
-    randomPool<float> symmrpoolf (POOL_MIN,POOL_MAX,SIZE);
-    randomPool<float> asymmrpoolf (.00001,POOL_MAX,SIZE);
-    randomPool<float> mone2onerpoolf (-1,1,SIZE);
+
+	std::cout << "Single Precision\n";
+
+	randomPool<float> symmrpoolf (POOL_MIN,POOL_MAX,SIZE);
+	randomPool<float> asymmrpoolf (.00001,POOL_MAX,SIZE);
+	randomPool<float> mone2onerpoolf (-1,1,SIZE);
 	randomPool<float> expPoolf (-80,80,SIZE);
-    
+	randomPool2D<float> mone2onerpool2Df (-1.f,-1.f,1.f,1.f,SIZE);
+
+	// simple
 	std::vector<genfpfcn_tuple<float>> sp_fcns;
-    getFunctionTuples(&sp_fcns,symmrpoolf,asymmrpoolf,mone2onerpoolf,expPoolf);
-    
-    for (const auto& spfcntuple : sp_fcns)
-      print_avg<float,genfpfcn_tuple<float>>(spfcntuple,ofile,REPETITIONS);
-      
+	getFunctionTuples(&sp_fcns,symmrpoolf,asymmrpoolf,mone2onerpoolf,expPoolf);
+
+	for (const auto& spfcntuple : sp_fcns)
+		print_avg<float,genfpfcn_tuple<float>>(spfcntuple,ofile,REPETITIONS);
+
 	// single precision vectorised
 
+	// Simple
 	std::vector<genfpfcnv_tuple<float>> sp_fcnsv;
-    getFunctionTuplesvect(&sp_fcnsv,symmrpoolf,asymmrpoolf,mone2onerpoolf,expPoolf);
+	getFunctionTuplesvect(&sp_fcnsv,symmrpoolf,asymmrpoolf,mone2onerpoolf,expPoolf);
 
-    for (const auto& spfcntuple : sp_fcnsv)
-      print_avg<float,genfpfcnv_tuple<float>>(spfcntuple,ofile,REPETITIONS);   
+	for (const auto& spfcntuple : sp_fcnsv)
+		print_avg<float,genfpfcnv_tuple<float>>(spfcntuple,ofile,REPETITIONS);
+
+	// 2D
+	std::cout << "\n\n Functions with Two Arguments \n";
+
+	// Double Precision
+	std::cout << "Double Precision\n";
+	std::vector<genfpfcn2D_tuple<double>> dp_fcns2D;
+	getFunctionTuples(&dp_fcns2D,mone2onerpool2D);
+
+	for (const auto& dpfcntuple : dp_fcns2D)
+		print_avg2D<double,genfpfcn2D_tuple<double>>(dpfcntuple,ofile,REPETITIONS);
+
+	// Double Precision Array
+
+	std::vector<genfpfcn2Dv_tuple<double>> dp_fcns2Dv;
+	getFunctionTuplesvect(&dp_fcns2Dv,mone2onerpool2D);
+
+	for (const auto& dpfcntuple : dp_fcns2Dv)
+		print_avg2D<double,genfpfcn2Dv_tuple<double>>(dpfcntuple,ofile,REPETITIONS);
+
+	// Single Precision
+	std::cout << "Single Precision\n";
+	std::vector<genfpfcn2D_tuple<float>> sp_fcns2D;
+	getFunctionTuples(&sp_fcns2D,mone2onerpool2Df);
+
+	for (const auto& spfcntuple : sp_fcns2D)
+		print_avg2D<float,genfpfcn2D_tuple<float>>(spfcntuple,ofile,REPETITIONS);
+
+
+	// Single Precision Array
+	std::vector<genfpfcn2Dv_tuple<float>> sp_fcns2Dv;
+	getFunctionTuplesvect(&sp_fcns2Dv,mone2onerpool2Df);
+
+	for (const auto& dpfcntuple : sp_fcns2Dv)
+		print_avg2D<float,genfpfcn2Dv_tuple<float>>(dpfcntuple,ofile,REPETITIONS);
 
 	ofile.close();
 }
